--- a/page3.html
+++ b/page3.html
@@ -4,30 +4,7 @@
 <head>
 
     <title>aula 06/03</title>
-    <style>
-        .caixa {
-            width: 250px;
-            height: 250px;
-            background-color: red;
-            border: 1px solid black;
-        }
-
-        .caixa2 {
-            width: 250px;
-            height: 250px;
-            background-color: #fff;
-            border: 1px solid black;
-        }
-
-        .conteiner {
-            background-color: #0011ff;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            width: 100%;
-            height: 500px;
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
